--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,81 @@
 * {
 	margin: 0;
 	padding: 0;
+	list-style: none;
+	text-decoration: none;
 }
 
 :root{
-	--baloo: 'Baloo Da 2', serif;
-	--josefin: 'Josefin Slab', sans-serif;
-	--mulish: 'Mulish', sans-serif;
+	--fonte1: 'Baloo Da 2', serif;
+	--fonte2: 'Josefin Slab', sans-serif;
+	--fonte3: 'Mulish', sans-serif;
+}
+
+div.hamburguer{
+	position: fixed;
+	width: 2rem;
+	height: 2rem;
+	z-index: 100;
+	right: 1.5rem;
+	top: 1.5rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	cursor: pointer;
+}
+
+div.hamburguer span{
+	position: absolute;
+	left: 3rem;
+	height: 2rem;
+	width: 6rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #6a3093;
+	color: white;
+	font-family: var(--fonte3);
+	opacity: 0;
+	transition: all 1s;
+}
+
+div.hamburguer span::before{
+	content: "";
+	position: absolute;
+	border-top: .5rem solid transparent;
+	border-left: .5rem solid transparent;
+	border-bottom: .5rem solid transparent;
+	border-right: .5rem solid #6a3093;
+	left: -1rem;
+}
+
+div.show-menu .hamburguer:hover span{
+	opacity: 1;
+}
+
+div.show-menu .hamburguer{
+	right: 16rem;
+}
+
+div.line{
+	width: 100%;
+	height: .13rem;
+	background-color: white;
+	box-shadow: 0.1rem 0.1rem 1px rgba(0, 0, 0, 0.9);
+	transition: all 1s;
+}
+
+div.show-menu #line1{
+	transform: rotate(45deg) translate(.3rem, .4rem);
+}
+
+div.show-menu #line2{
+	opacity: 0;
+	visibility: hidden;
+}
+
+div.show-menu #line3{
+	transform: rotate(-45deg) translate(.15rem, -.45rem);
 }
 
 header{
@@ -49,7 +118,7 @@ header > div.banner{
 header > div.banner h1{
 	color: white;
 	font-size: 3em;
-	font-family: var(--baloo);
+	font-family: var(--fonte1);
 	font-weight: 300;
 	text-shadow: .2rem .3rem 2px rgba(0, 0, 0, 0.5);
 	line-height: 3rem;
@@ -59,7 +128,7 @@ header > div.banner h1{
 }
 
 header > div.banner p{
-	font-family: var(--josefin);
+	font-family: var(--fonte2);
 	color: white;
 	font-size: 2rem;
 	text-shadow: .3rem .2rem rgba(0, 0, 0, 0.4);
@@ -68,7 +137,7 @@ header > div.banner p{
 	animation: moveBanner 1s 0.7s forwards;
 }
 header > div.banner button{
-	font-family: var(--mulish);
+	font-family: var(--fonte3);
 	color: white;
 	text-transform: uppercase;
 	letter-spacing: .1rem;
@@ -93,3 +162,63 @@ header > div.banner button{
 	}
 }
 
+div.sidebar{
+	position: fixed;
+	width: 20rem;
+	height: 100vh;
+	background-color: white;
+	top: 0;
+	right: 0;
+	right: -20rem;
+	transition: all 1s;
+}
+
+div.show-menu div.sidebar{
+	right: 0;
+}
+
+div.sidebar ul.menu{
+	position: absolute;
+	top: 40%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+div.sidebar ul.menu > li.menu-item{
+	text-align: center;
+	margin-bottom: 0.3rem;
+}
+
+div.sidebar ul.menu > li.menu-item > a.menu-link{
+	font-family: var(--fonte3);
+	font-size: 2rem;
+	color: #555555;
+	transition: color 1s;
+}
+
+div.sidebar ul.menu > li.menu-item > a.menu-link:hover{
+	color: #6a3093;
+}
+
+div.sidebar div.social-media{
+	position: absolute;
+	bottom: 2rem;
+	width: 100%;
+	display: flex;
+	justify-content: space-evenly;
+}
+
+div.sidebar div.social-media i{
+	color : #555555;
+	width: 2.5rem;
+	height: 2.5rem;
+	font-size: 2rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 50%;
+	transition: color 0.5s;
+}
+div.sidebar div.social-media i:hover{
+	color: gray;
+}
