--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ header > div.banner button{
 	}
 }
 
-div.sidebar{
+aside.sidebar{
 	position: fixed;
 	width: 20rem;
 	height: 100vh;
@@ -173,34 +173,34 @@ div.sidebar{
 	transition: all 1s;
 }
 
-div.show-menu div.sidebar{
+div.show-menu aside.sidebar{
 	right: 0;
 }
 
-div.sidebar ul.menu{
+aside.sidebar ul.menu{
 	position: absolute;
 	top: 40%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
 
-div.sidebar ul.menu > li.menu-item{
+aside.sidebar ul.menu > li.menu-item{
 	text-align: center;
 	margin-bottom: 0.3rem;
 }
 
-div.sidebar ul.menu > li.menu-item > a.menu-link{
+aside.sidebar ul.menu > li.menu-item > a.menu-link{
 	font-family: var(--fonte3);
 	font-size: 2rem;
 	color: #555555;
 	transition: color 1s;
 }
 
-div.sidebar ul.menu > li.menu-item > a.menu-link:hover{
+aside.sidebar ul.menu > li.menu-item > a.menu-link:hover{
 	color: #6a3093;
 }
 
-div.sidebar div.social-media{
+aside.sidebar div.social-media{
 	position: absolute;
 	bottom: 2rem;
 	width: 100%;
@@ -208,7 +208,7 @@ div.sidebar div.social-media{
 	justify-content: space-evenly;
 }
 
-div.sidebar div.social-media i{
+aside.sidebar div.social-media i{
 	color : #555555;
 	width: 2.5rem;
 	height: 2.5rem;
@@ -219,6 +219,86 @@ div.sidebar div.social-media i{
 	border-radius: 50%;
 	transition: color 0.5s;
 }
-div.sidebar div.social-media i:hover{
+aside.sidebar div.social-media i:hover{
 	color: gray;
+}
+
+div.conhecimentos{
+	display: grid;
+	grid-template-columns: repeat(16, 1fr);
+	grid-template-rows: repeat(6, 4rem);
+	row-gap: 1.5rem;
+}
+
+div.conhecimento:nth-child(1){
+	grid-column: 4/7;
+	grid-row: 1/3;
+}
+div.conhecimento:nth-child(2){
+	grid-column: 3/6;
+	grid-row: 3/5;
+}
+div.conhecimento:nth-child(3){
+	grid-column: 4/7;
+	grid-row: 5/-1;
+}
+div.conhecimento:nth-child(4){
+	grid-column: 11/14;
+	grid-row: 1/3;
+}
+div.conhecimento:nth-child(5){
+	grid-column: 12/15;
+	grid-row: 3/5;
+}
+div.conhecimento:nth-child(6){
+	grid-column: 11/14;
+	grid-row: 5/-1;
+}
+div.conhecimentos-img-wrapper{
+	grid-column: 7/11;
+	grid-row: 2/6;
+	width: 100%;
+}
+div.conhecimentos-img-wrapper img{
+	object-fit: cover;
+	width: 100%;
+}
+
+section.sessao-conhecimentos{
+	background-color: #f5f5f5;
+}
+
+div.sessao-header{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+div.sessao-header h1{
+	font-family: var(--fonte1);
+	font-size: 3rem;
+	color: #4b4b4b;
+	border-bottom: solid 3px #6a3093;
+	margin-bottom: 1.5rem;
+}
+
+div.conhecimento-header{
+	display: flex;
+	align-items: center;
+	color: #4b4b4b;
+}
+
+div.conhecimento-header i{
+	font-size: 2.5rem;
+	margin-right: 1rem;
+}
+
+div.conhecimento-header h3{
+	font-family: var(--fonte2);
+	font-size: 2rem;
+}
+
+div.conhecimento-text{
+	font-family: var(--fonte2);
+	margin-top: 1rem;
 }
