--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,7 @@ aside.sidebar{
 	right: 0;
 	right: -20rem;
 	transition: all 1s;
+	z-index: 90;
 }
 
 div.show-menu aside.sidebar{
@@ -301,4 +302,87 @@ div.conhecimento-header h3{
 div.conhecimento-text{
 	font-family: var(--fonte2);
 	margin-top: 1rem;
+}
+
+div.projetos{
+	display: flex;
+	justify-content: space-evenly;
+}
+
+div.card{
+	position: relative;
+	width: 18rem;
+	height: 25rem;
+}
+
+div.card-img-wrapper{
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	border-radius: .5rem;
+}
+div.card-img-wrapper img{
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+	opacity: 0.8;
+	border-radius: .5rem;
+}
+
+div.card-info{
+	position: absolute;
+	bottom: 0;
+	padding: 2rem;
+	text-shadow: 0 0.3rem 0.3rem rgba(0, 0, 0, 0.6);
+	opacity: 0;
+	visibility: hidden;
+	transition: all .3s;
+}
+
+div.card-info h2{
+	font-family: var(--fonte1);
+	font-size: 2rem;
+	font-weight: 500;
+	color: #eeeeee;
+}
+
+div.card-info h3{
+	font-family: var(--fonte2);
+	font-weight: 700;
+	color: #DE24FF;
+	margin-bottom: 1rem;
+}
+
+
+div.card-info p{
+	font-family: var(--fonte2);
+	color: #eeeeee;
+	font-weight: 500;
+	width: 80%;
+	margin-bottom: 1rem;
+}
+
+div.card-info button{
+	width: 8rem;
+	height: 2.5rem;
+	font-family: var(--fonte3);
+	color: #eeeeee;
+	letter-spacing: .1rem;
+	background: #6a3093;
+	background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+	background: linear-gradient(to right, #a044ff, #6a3093);
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+	box-shadow: .5rem 0.5rem 0.8rem rgba(0, 0, 0, 0.8):
+}
+
+div.card:hover div.card-info{
+	bottom: 2rem;
+	opacity: 1;
+	visibility: visible;
+}
+
+div.card:hover div.card-img-wrapper img{
+	opacity: 0.5;
 }
