--- a/css/style.css
+++ b/css/style.css
@@ -136,18 +136,25 @@ header > div.banner p{
 	opacity: 0;
 	animation: moveBanner 1s 0.7s forwards;
 }
-header > div.banner button{
+
+button.btn{
 	font-family: var(--fonte3);
-	color: white;
-	text-transform: uppercase;
+	color: #eeeeee;
 	letter-spacing: .1rem;
 	background: #6a3093;
 	background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
 	background: linear-gradient(to right, #a044ff, #6a3093);
-	padding: 1rem 3rem;
 	border: none;
 	border-radius: 5px;
 	cursor: pointer;
+	box-shadow: .5rem 0.5rem 0.8rem rgba(0, 0, 0, 0.8):
+}
+
+header > div.banner button{
+	font-family: var(--fonte3);
+	color: white;
+	text-transform: uppercase;
+	padding: 1rem 3rem;
 	opacity: 0;
 	animation: moveBanner 1s 0.9s forwards;
 }
@@ -267,6 +274,8 @@ div.conhecimentos-img-wrapper img{
 
 section.sessao-conhecimentos{
 	background-color: #f5f5f5;
+	height: 100vh;
+	width: 100%;
 }
 
 div.sessao-header{
@@ -307,6 +316,7 @@ div.conhecimento-text{
 div.projetos{
 	display: flex;
 	justify-content: space-evenly;
+	margin-bottom: 2rem;
 }
 
 div.card{
@@ -362,19 +372,11 @@ div.card-info p{
 	margin-bottom: 1rem;
 }
 
+
+
 div.card-info button{
 	width: 8rem;
 	height: 2.5rem;
-	font-family: var(--fonte3);
-	color: #eeeeee;
-	letter-spacing: .1rem;
-	background: #6a3093;
-	background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
-	background: linear-gradient(to right, #a044ff, #6a3093);
-	border: none;
-	border-radius: 5px;
-	cursor: pointer;
-	box-shadow: .5rem 0.5rem 0.8rem rgba(0, 0, 0, 0.8):
 }
 
 div.card:hover div.card-info{
@@ -385,4 +387,166 @@ div.card:hover div.card-info{
 
 div.card:hover div.card-img-wrapper img{
 	opacity: 0.5;
+}
+
+section.sessao-contato{
+	display: flex;
+	width: 100%;
+	height: 100vh;
+	background-color: #272727;
+	align-items: center;
+	justify-content: center;
+}
+
+section.sessao-contato div.contato-wrapper{
+	width: 60%;
+	height: 30rem;
+	display: flex;
+	box-shadow: 0 2rem 3rem rgba(0, 0, 0, 0.5)
+}
+
+section.sessao-contato div.contato-left{
+	width: 35%;
+	background: linear-gradient(rgba(2,2,2, 0.4), rgba(22,22,22, 0.8)), url("../images/contato.jpg");
+	background-size: cover;
+}
+
+section.sessao-contato div.contato-right{
+	width: 65%;
+	background-color: #eeeeee;
+	padding: 1rem 3rem 3rem 3rem;
+}
+
+section.sessao-contato div.input-group{
+	position: relative;
+}
+
+section.sessao-contato h1{
+	width: 100%;
+	font-family: var(--fonte1);
+	color : #272727;
+	font-size: 3rem;
+	font-weight: lighter;
+	text-align: center;
+}
+
+section.sessao-contato form{
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+section.sessao-contato .field{
+	background: transparent;
+	border: none;
+	width: 20rem;
+	font-size: 1.5rem;
+	font-family: var(--fonte2);
+	border-bottom: 2px dashed gray;
+	height: 3rem;
+	outline: none;
+	margin: 1rem 0;
+}
+
+section.sessao-contato label.field-label{
+	position: absolute;
+	top: 2rem;
+	left: 0;
+	font-size: 1.2rem;
+	font-family: var(--fonte2);
+	text-transform: uppercase;
+	transition: all .3s;
+}
+
+section.sessao-contato textarea.field{
+	padding-top: 1rem;
+	max-width: 25rem;
+	max-height: 3rem;
+	resize: none;
+}
+
+section.sessao-contato .field:focus ~ label{
+	top: 0;
+	font-size: 1rem;
+}
+
+section.sessao-contato .field:valid ~ label{
+	top: 0;
+	font-size: 1rem;
+}
+
+section.sessao-contato .field:focus{
+	border-bottom: 1px solid rgba(0, 0, 0, 0.5)
+}
+
+button.btn-submit{
+	text-transform: uppercase;
+	font-size: 1.2rem;
+	width: 75%;
+	height: 3rem;
+}
+
+section.sessao-orcamento{
+	width: 100%;
+	height: 100vh;
+	background: url("../images/bg-orcamento.jpg");
+	object-fit: cover;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+div.orcamento-wrapper{
+	position: relative;
+	width: 60%;
+	height: 80%;
+	background-color: #ffffffaa;
+	border-radius: 10px;
+	box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5)
+}
+section.sessao-orcamento h1{
+	position: absolute;
+	top: -2.5rem;
+	left: 2rem;
+	background: #6a3093;
+	background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+	background: linear-gradient(to right, #a044ff, #6a3093);
+	padding: 0 3rem;
+	color: white;
+	font-family: var(--fonte1);
+	font-size: 3rem;
+	font-weight: lighter;
+	box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
+	border-radius: 10px;
+}
+
+section.sessao-orcamento form{
+	margin: 4rem;
+	display: grid;
+	grid-template-columns: auto 1fr;
+	column-gap: 2rem;
+	row-gap: 2rem;
+}
+
+section.sessao-orcamento label{
+	font-family: var(--fonte2);
+	font-size: 1.5rem;
+	font-weight: 700;
+}
+
+section.sessao-orcamento input[type="number"]{
+	font-family: var(--fonte2);
+	width: 4rem;
+	font-size: 2rem;
+	border-radius: 10px;
+	border: none;
+	padding: 0.3rem;
+}
+
+
+section.sessao-orcamento button.btn-orcamento{
+	text-transform: uppercase;
+	padding: 1rem;
+	grid-column: 2;
 }
