--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@
 	--fonte3: 'Mulish', sans-serif;
 }
 
+html{
+	scroll-behavior: smooth;
+}
+
 div.hamburguer{
 	position: fixed;
 	width: 2rem;
@@ -549,4 +553,52 @@ section.sessao-orcamento button.btn-orcamento{
 	text-transform: uppercase;
 	padding: 1rem;
 	grid-column: 2;
+}
+
+footer{
+	width: 100%;
+	height: 7rem;
+	background-color: #17181b;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+footer div.footer-content{
+	width: 60%;
+	display: flex;
+	justify-content: space-between;
+}
+
+footer div.footer-content p{
+	font-family: var(--fonte2);
+	color: #a7a7a7;
+	font-size: 1.2rem;
+}
+
+footer div.social-list ul{
+	display: flex;
+}
+footer div.social-list a{
+	margin: 0 2rem;
+	color: #a7a7a7;
+	font-size: 1.3rem;
+}
+
+#link-top{
+	position: fixed;
+	right: 3rem;
+	bottom: 3rem;
+	width: 2rem;
+	font-size: 2rem;
+	text-align: center;
+	height: 2rem;
+	background: #6a3093;
+	background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+	background: linear-gradient(to right, #a044ff, #6a3093);
+	color: white;
+	padding: 0.3rem;
+	border-radius: 5px;
+	box-shadow: 0 0.1rem 0.5rem rgba(0, 0, 0, 0.5)
+
 }
